<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentEnd="true"
    android:visibility="visible">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <SearchView
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@+id/imageView" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:elevation="0dp"
                app:srcCompat="@drawable/icon" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appbar">

        <Button
            android:id="@+id/buttonBackSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/buttonBack" />

        <TextView
            android:id="@+id/aff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/buttonBackSearch"
            android:text="TextView" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appbar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="120dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp">

        <ListView
            android:id="@+id/listRestaurant"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="false"
        android:layout_centerVertical="true"
        android:layout_marginStart="15dp"
        android:visibility="visible"
        android:background="@color/searchFilter">

        <TextView
            android:id="@+id/filter"
            android:layout_width="157dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="-157dp"
            android:layout_marginBottom="8dp"
            android:text="@string/filter"
            android:visibility="visible" />

        <CheckBox
            android:id="@+id/checkBoxRate"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/filter"
            android:text="@string/checkboxRate"
            android:onClick="addListenerOnCheckBox"/>


        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkBoxRate"
            android:layout_marginTop="15dp"
            android:text="@string/price" />

        <CheckBox
            android:id="@+id/checkBox10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/price"
            android:text="@string/checkbox10"
            android:onClick="addListenerOnCheckBox"/>

        <CheckBox
            android:id="@+id/checkBox20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkBox10"
            android:text="@string/checkbox20"
            android:onClick="addListenerOnCheckBox"/>

        <CheckBox
            android:id="@+id/checkBox30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkBox20"
            android:text="@string/checkbox30"
            android:onClick="addListenerOnCheckBox"/>

    </RelativeLayout>


</RelativeLayout>