<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:id="@+id/rl1fp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/goBackArrowOnForgotPasswordPage"
                    android:layout_width="@android:dimen/app_icon_size"
                    android:layout_height="@android:dimen/app_icon_size"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    app:srcCompat="@drawable/go_back" />

                <RelativeLayout
                    android:id="@+id/rl2fp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/logoOnForgotPasswordPage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="15dp"
                        app:srcCompat="@drawable/icon" />

                    <TextView
                        android:id="@+id/forgotPasswordTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/logoOnForgotPasswordPage"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:text="@string/forgotPasswordTitle"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/forgotPasswordMessage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/forgotPasswordTitle"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="30dp"
                        android:layout_marginBottom="15dp"
                        android:text="@string/forgotPasswordMessage"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/emailFieldOnForgotPasswordPage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/forgotPasswordMessage"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:ems="10"
                        android:hint="@string/emailPrompt"
                        android:inputType="textEmailAddress"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

                    <TextView
                        android:id="@+id/errorMessageOnForgotPasswordPage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/emailFieldOnForgotPasswordPage"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="15dp"
                        android:text=""
                        android:textAlignment="center"
                        android:textColor="@color/indicatorRed"
                        android:textSize="14sp"
                        android:visibility="invisible" />

                </RelativeLayout>



            </RelativeLayout>

        </ScrollView>
    <Button
        android:id="@+id/enterButtonOnForgotPasswordPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/holo_orange_light"
        android:text="@string/enter"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />
    </RelativeLayout>

